Re-organize and style Decisions V2
* Remove days to hide from public
* Chair Review Required as Default

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-documents/decision-documents.component.scss
@@ -1,12 +1,8 @@
 @use '../../../../../../styles/colors';
 
-.header {
-  display: flex;
-  justify-content: space-between;
-}
-
 .documents {
   margin-top: 12px;
+  border-collapse: collapse;
 }
 
 .upload-button {
