--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
@@ -1,31 +1,15 @@
 <section>
-  <div class="row">
-    <h5>Decision Components</h5>
-  </div>
-
-  <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
-    <app-decision-component
-      [(data)]="components[index]"
-      [codes]="codes"
-      (dataChange)="onChange()"
-    ></app-decision-component>
-    <div class="row">
-      <button type="button" class="remove-button" mat-stroked-button color="warn" (click)="onRemove(index)">
-        Remove Component
-      </button>
-    </div>
-  </div>
-
-  <div class="row">
+  <div class='split'>
+    <h3>Components</h3>
     <div>
       <button
         [ngClass]="{ 'error-field-outlined ng-invalid': showError }"
         type="button"
         [matMenuTriggerFor]="decisionComponentMenu"
-        mat-stroked-button
+        mat-flat-button
         color="primary"
       >
-        ADD Decision component ▾
+        Add Component ▾
       </button>
       <app-error-message *ngIf="showError"></app-error-message>
     </div>
@@ -43,4 +27,13 @@
       </div>
     </button>
   </mat-menu>
+
+  <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
+    <app-decision-component
+      [(data)]="components[index]"
+      [codes]="codes"
+      (dataChange)="onChange()"
+      (remove)='onRemove(index)'
+    ></app-decision-component>
+  </div>
 </section>
