--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-conditions/decision-condition/decision-condition.component.scss
@@ -1,30 +1,14 @@
+form {
+  margin-top: 12px;
+}
+
 .condition {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: calc(50% - 12px) calc(50% - 12px);
   grid-column-gap: 24px;
   grid-row-gap: 24px;
 
-  .condition-grid-1 {
-    grid-column: 1/3;
-  }
-
-  .condition-grid-2 {
-    grid-column: 3/5;
-  }
-
-  .condition-grid-3 {
-    grid-column: 5/7;
-  }
-
-  .condition-grid-half-1 {
-    grid-column: 1/4;
-  }
-
-  .condition-grid-half-2 {
-    grid-column: 4/7;
-  }
-
   .condition-full-width {
-    grid-column: 1/7;
+    grid-column: 1/3;
   }
 }
