--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -1,5 +1,25 @@
 @use '../../../../../../styles/colors.scss';
 
+.bottom-scroller {
+  margin-top: 36px;
+  position: absolute;
+  bottom: 0;
+  left: 212px;
+  right: 0;
+  background-color: #fff;
+  padding: 16px;
+  z-index: 2;
+  border-top: 1px solid colors.$grey-light;
+
+  button:not(:last-child) {
+    margin-right: 16px !important;
+  }
+}
+
+form {
+  padding-bottom: 120px;
+}
+
 :host::ng-deep {
   .grid,
   .grid-2 {
@@ -11,6 +31,11 @@
     .full-width {
       grid-column: 1/3;
     }
+  }
+
+  h3 {
+    margin-top: 36px !important;
+    margin-bottom: 12px !important;
   }
 
   .resolution-number-wrapper {
@@ -88,14 +113,6 @@
   .container-wide {
     max-width: 700px;
   }
-  .btn-row {
-    justify-content: space-between;
-  }
-
-  .flex-right {
-    display: flex;
-    justify-content: right;
-  }
 
   .resolution-number-wrapper {
     display: flex;
@@ -125,15 +142,6 @@
 
   .soil-text-area {
     height: 100px !important;
-  }
-
-  .subheading1 {
-    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
-    font-size: 19px !important;
-    font-weight: 400 !important;
-    line-height: 24px;
-    color: #565656 !important;
-    margin: 24px 0 !important;
   }
 
   .error-field-outlined.ng-invalid {
