Add confirmation dialogs, fix error state
* Error state had no border so was not showing red
* Add confirmation dialogs for removing conditions / components.

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -145,7 +145,7 @@ form {
   }
 
   .error-field-outlined.ng-invalid {
-    border-color: colors.$error-color !important;
+    border: 1px solid colors.$error-color !important;
 
     .mat-button-toggle {
       border-color: colors.$error-color;
@@ -154,7 +154,7 @@ form {
 
     &.upload-button {
       border: 2px solid colors.$error-color;
-      margin-bottom: 0px !important;
+      margin-bottom: 0 !important;
     }
   }
 
